tests/data/pl0/valid/limit_identifier_max_length_ok.pl0
var abcdefghij;
begin
  abcdefghij := 1;
  ! abcdefghij
end.
