tests/data/pl0/invalid/limit_identifier_too_long.pl0
var abcdefghijk;
begin
  abcdefghijk := 1
end.
